<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_homeTeam"
            android:layout_width="@dimen/team_image_width"
            android:layout_height="@dimen/team_image_height"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_default"
            android:contentDescription="@string/homeTeam_flag"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_homeTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_homeTeam"
            android:layout_alignBaseline="@id/iv_homeTeam"
            android:layout_alignStart="@+id/iv_homeTeam"
            android:layout_alignEnd="@+id/iv_homeTeam"
            android:layout_margin="@dimen/margin_default"
            tools:text="@string/name_homeTeam" />

        <TextView
            android:id="@+id/score_homeTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/tv_versus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/txt_score_homeTeam" />

        <TextView
            android:id="@+id/tv_versus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/versus" />

        <ImageView
            android:id="@+id/iv_awayTeam"
            android:layout_width="@dimen/team_image_height"
            android:layout_height="@dimen/team_image_height"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_default"
            android:contentDescription="@string/iv_away_team_flag"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_awayTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_homeTeam"
            android:layout_alignBaseline="@id/iv_awayTeam"
            android:layout_alignStart="@+id/iv_awayTeam"
            android:layout_alignEnd="@+id/iv_awayTeam"
            android:layout_margin="@dimen/margin_default"
            tools:text="@string/txt_name_awayTeam" />

        <TextView
            android:id="@+id/score_awayTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_versus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/txt_score_awayTeam" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>